// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data component renders 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`Data component renders 2`] = `
.c0 {
  margin: 0;
  padding: 0;
  width: calc(100% - 256px);
  height: calc(100vh - 54px);
  vertical-align: top;
  display: inline-block;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  className="c0"
  open={true}
/>
`;

exports[`Data component renders 3`] = `
.c0 {
  margin: 0;
  padding: 0;
  width: calc(100% - 65px);
  height: calc(100vh - 54px);
  vertical-align: top;
  display: inline-block;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  className="c0"
  open={false}
/>
`;
